force-app/main/default/objects/TruckRetail__c/TruckRetail__c.object-meta.xml
<CustomObject>
    <label>トラック小売り</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>トラック小売りNo.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>