force-app/main/default/objects/TruckRetail__c/fields/Business_sales_setting_price__c.field-meta.xml
<CustomField>
    <fullName>Business_sales_setting_price__c</fullName>
    <description>九條</description>
    <label>業販設定価格</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>