force-app/main/default/objects/TruckRetail__c/fields/Destination_truck__c.field-meta.xml
<CustomField>
    <fullName>Destination_truck__c</fullName>
    <description>九條</description>
    <label>出品先</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>トラック王国　北関東展示場</fullName>
            </value>
            <value>
                <fullName>トラック王国　神奈川展示場</fullName>
            </value>
            <value>
                <fullName>トラック王国　中部展示場</fullName>
            </value>
            <value>
                <fullName>トラック王国　関西展示場</fullName>
            </value>
            <value>
                <fullName>トラック王国　福岡展示場</fullName>
            </value>
            <value>
                <fullName>トラックランド栃木</fullName>
            </value>
            <value>
                <fullName>トラックランド京都</fullName>
            </value>
            <value>
                <fullName>自社ヤード出品</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>