force-app/main/default/objects/TruckRetail__c/fields/OtherExpenses__c.field-meta.xml
<CustomField>
    <fullName>OtherExpenses__c</fullName>
    <description>九條</description>
    <label>その他費用</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>