force-app/main/default/objects/TruckRetail__c/fields/Result_input_date__c.field-meta.xml
<CustomField>
    <fullName>Result_input_date__c</fullName>
    <description>九條</description>
    <label>結果入力日</label>
    <type>Date</type>
</CustomField>