force-app/main/default/objects/TruckRetail__c/fields/Retail_scheduled_end_date__c.field-meta.xml
<CustomField>
    <fullName>Retail_scheduled_end_date__c</fullName>
    <description>九條</description>
    <label>掲載終了予定日</label>
    <type>Date</type>
</CustomField>