force-app/main/default/objects/TruckRetail__c/fields/Retail_start_Date__c.field-meta.xml
<CustomField>
    <fullName>Retail_start_Date__c</fullName>
    <description>九條</description>
    <label>掲載スタート日</label>
    <type>Date</type>
</CustomField>