force-app/main/default/objects/TruckRetail__c/fields/Truck_Division_memo__c.field-meta.xml
<CustomField>
    <fullName>Truck_Division_memo__c</fullName>
    <description>九條</description>
    <label>トラック事業部メモ</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>