force-app/main/default/objects/TruckRetail__c/fields/Truck_retail_results__c.field-meta.xml
<CustomField>
    <fullName>Truck_retail_results__c</fullName>
    <label>トラック小売り結果</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>小売り掲載中</fullName>
            </value>
            <value>
                <fullName>小売り成約</fullName>
            </value>
            <value>
                <fullName>売れず870AA</fullName>
            </value>
            <value>
                <fullName>小売り断念他社AA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>