force-app/main/default/objects/TruckRetail__c/fields/TruckRetailFlags__c.field-meta.xml
<CustomField>
    <fullName>TruckRetailFlags__c</fullName>
    <description>九條</description>
    <label>トラック小売りフラグ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>する</fullName>
            </value>
            <value>
                <fullName>しない</fullName>
            </value>
            <value>
                <fullName>保留</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>