force-app/main/default/objects/TruckRetail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PurchaseOpportunity__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Retail_start_Date__c</columns>
    <columns>Truck_retail_results__c</columns>
    <columns>Result_input_date__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>